--- a/landing-page/css/main.css
+++ b/landing-page/css/main.css
@@ -86,9 +86,19 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
   text-align: center;
   position: relative; }
 
+.contact-text .desc-text {
+  margin-bottom: 90px;
+}
+  
+.contact-img img {
+  position: relative;
+  bottom: 40px;
+}
+
+
 .section-header .section-title {
   font-size: 35px;
-  margin-bottom: 12px;
+  margin-bottom: 42px;
   font-weight: 600;
   position: relative;
   line-height: 30px; }
@@ -124,7 +134,7 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
   outline: none; }
 
 .btn-common {
-  background-color: #3ecf8e;
+  background-color: #eab405;
   position: relative;
   z-index: 1;
   box-shadow: 0px 8px 9px 0px rgba(96, 94, 94, 0.17);
@@ -144,8 +154,8 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
   border-width: 1px;
   cursor: pointer;
   background-color: transparent;
-  border-color: #3ecf8e;
-  color: #3ecf8e;
+  border-color: #eab405;
+  color: #eab405;
   width: 160px;
   height: 50px;
   padding: 14px 15px; }
@@ -156,19 +166,22 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
 
 .btn-border-filled {
   cursor: pointer;
-  background-color: #3ecf8e;
-  border: 1px solid #3ecf8e;
+  background-color: #eab405;
+  border: 1px solid #daa600;
   color: #fff;
-  box-shadow: 0px 8px 9px 0px rgba(96, 94, 94, 0.17);
+  box-shadow: 0px 8px 9px 0px rgb(96 94 94 / 17%);
   width: 180px;
   height: 50px;
-  padding: 15px 15px; }
+  padding: 15px 15px;
+  }
 
 .btn-border-filled:hover {
   color: #fff;
-  background-color: transparent;
   border-color: #fff;
-  transform: translateY(-2px); }
+  background-color: #eab405;
+  border: 1px solid #daa600;
+  transform: translateY(-2px);
+}
 
 .btn-lg {
   padding: 14px 33px;
@@ -348,8 +361,7 @@ button:focus {
   cursor: pointer;
   text-align: center;
   border-radius: 4px;
-  background: #5533ff;
-  background: linear-gradient(95deg, #5533ff 40%, #25ddf5 100%);
+  background: #006991;
   box-shadow: 0px 8px 9px 0px rgba(96, 94, 94, 0.17);
   z-index: 9999999; }
 
@@ -369,8 +381,8 @@ button:focus {
   color: #fff; }
 
 .menu-bg {
-  background: #5533ff;
-  background: linear-gradient(95deg, #5533ff 40%, #25ddf5 100%) !important;
+  background: #006991;
+  background: linear-gradient(95deg, #006991 40%, #56a5c4 100%) !important;
   box-shadow: 0 0 7px 1px rgba(0, 0, 0, 0.1);
   z-index: 9999;
   padding: 5px;
@@ -461,8 +473,8 @@ button:focus {
     height: 100%;
     top: 0px;
     left: 0px;
-    background: #5533ff;
-    background: linear-gradient(95deg, #5533ff 40%, #25ddf5 100%);
+    background: #006991;
+    background: linear-gradient(95deg, #006991 40%, #56a5c4 100%);
     -webkit-transform: skewY(-12deg);
     transform: skewY(-12deg);
     -webkit-transform-origin: 0;
@@ -475,15 +487,15 @@ button:focus {
       left: 16.66666%;
       left: calc(calc(100% / 3) / 2);
       right: auto;
-      background: #5533ff;
-      background: linear-gradient(95deg, #5533ff 40%, #25ddf5 100%);
+      background: #006991;
+      background: linear-gradient(95deg, #006991 40%, #56a5c4 100%);
       height: 200px; }
     .hero-area .overlay :nth-child(2) {
       width: 33.33333%;
       width: calc(100% /3);
       bottom: 0;
-      background: #5533ff;
-      background: linear-gradient(95deg, #5533ff 40%, #25ddf5 100%);
+      background: #006991;
+      background: linear-gradient(95deg, #006991 40%, #56a5c4 100%);
       position: absolute;
       height: 155px;
       left: 3%; }
@@ -491,7 +503,7 @@ button:focus {
     padding: 220px 0; }
     .hero-area .contents h2 {
       color: #fff;
-      font-size: 38px;
+      font-size: 36px;
       font-weight: 600;
       line-height: 60px;
       margin-bottom: 20px; }
@@ -504,11 +516,11 @@ button:focus {
       margin-right: 20px;
       text-transform: uppercase;
       width: 180px;
-      height: 50px;
+      height: 54px;
       padding: 15px 15px; }
     .hero-area .contents .btn-border {
       border: 1px solid #fff;
-      color: #3ecf8e !important;
+      color: #eab405 !important;
       -webkit-box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
       box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
       width: 180px;
@@ -517,31 +529,37 @@ button:focus {
       background: #fff; }
       .hero-area .contents .btn-border:hover {
         background: #fff;
-        color: #3ecf8e; }
+        color: #eab405; }
   .hero-area .intro-img {
     padding: 180px 0 0px; }
     .hero-area .intro-img img {
       display: block;
       height: auto;
-      max-width: 100%; }
+      max-width: 100%;
+      position: relative;
+      left: 100px;
+      bottom: 40px;
+    }
 
 /* ==========================================================================
    About 
    ========================================================================== */
 #services .services-item {
   padding: 60px 30px;
-  border: 1px solid #ddd;
+  
   -moz-transition: all .8s ease;
   -webkit-transition: all .8s ease;
+  min-height: 420px;
   transition: all .8s ease; }
-  #services .services-item:hover {
-    border: 1px solid #3ecf8e;
-    box-shadow: 0px 0px 25px 0px rgba(95, 95, 95, 0.24);
-    -moz-transition: all .4s ease;
-    -webkit-transition: all .4s ease;
-    transition: all .4s ease; }
+  
+  #services .services-item:hover .icon {
+    transform: translateY(-5px);
+  }
+    
   #services .services-item .icon {
-    background: #e3fff2;
+    background: #e0eff4;
+    border: 2px solid #016991;
+    transition: 300ms;
     width: 110px;
     height: 110px;
     margin: 0px auto;
@@ -553,7 +571,7 @@ button:focus {
     margin-bottom: 25px; }
   #services .services-item .icon i {
     font-size: 40px;
-    color: #3ecf8e;
+    color: #006991;
     position: absolute;
     left: 0;
     right: 0;
@@ -572,12 +590,19 @@ button:focus {
    business-plan Section 
    ========================================================================== */
 #business-plan {
-  padding-bottom: 130px; }
+  padding-bottom: 100px; }
   #business-plan .container-fluid {
     padding-right: 30px;
     padding-left: 30px; }
   #business-plan .business-item-info {
-    margin-top: 60px; }
+    margin-top: 60px;
+  }
+  #business-plan .business-item-info ul {
+    color: #006991;
+    font-size: 16px;
+    line-height: 32px;
+    font-weight: 500;
+  }
     #business-plan .business-item-info h3 {
       font-size: 35px;
       font-weight: 600;
@@ -594,20 +619,25 @@ button:focus {
   #features .featured-bg {
     background: #fff; }
   #features .featured-border1 {
-    border-bottom: 1px solid #ededed;
-    border-right: 1px solid #ededed; }
+    border-bottom: 5px solid #f9f9f9; 
+    border-right: 5px solid #f9f9f9;  }
   #features .featured-border2 {
-    border-bottom: 1px solid #ededed; }
+    border-bottom: 5px solid #f9f9f9; }
   #features .featured-border3 {
-    border-right: 1px solid #ededed; }
+    border-right: 5px solid #f9f9f9;  }
   #features .feature-item {
+    display: grid;
+    grid-template-columns: 100px auto;
+    grid-gap: 40px;
+    min-height: 250px;
     padding: 30px;
     overflow: hidden;
     -moz-transition: all .8s ease;
     -webkit-transition: all .8s ease;
     transition: all .8s ease; }
     #features .feature-item .feature-icon {
-      background: #e3fff2;
+      background: #e0eff4;
+      border: 2px solid #016991;
       width: 100px;
       height: 100px;
       margin: 0px auto;
@@ -621,11 +651,12 @@ button:focus {
       border-radius: 50%;
       position: relative;
       margin-right: 30px;
-      border: 1px solid #3ecf8e;
-      margin-top: 12px; }
+      margin-top: 12px;
+      transition: 300ms;
+    }
       #features .feature-item .feature-icon i {
         font-size: 40px;
-        color: #3ecf8e;
+        color: #016991;
         position: absolute;
         left: 0;
         right: 0;
@@ -637,22 +668,18 @@ button:focus {
     #features .feature-item p {
       font-size: 16px;
       display: block; }
-    #features .feature-item:hover {
-      box-shadow: 0px 0px 25px 0px rgba(95, 95, 95, 0.24);
-      -moz-transition: all .8s ease;
-      -webkit-transition: all .8s ease;
-      transition: all .8s ease; }
+
+    
     #features .feature-item:hover .feature-icon {
-      background: #3ecf8e;
-      -moz-transition: all .8s ease;
-      -webkit-transition: all .8s ease;
-      transition: all .8s ease; }
+      transform: translateY(-5px);
+    }
+      /*
     #features .feature-item:hover .feature-icon i {
       color: #fff;
       -moz-transition: all .8s ease;
       -webkit-transition: all .8s ease;
       transition: all .8s ease; }
-
+*/
 /* ==========================================================================
    Features 
    ========================================================================== */
@@ -764,13 +791,13 @@ button:focus {
   #showcase .showcase-text p {
     color: #fff; }
   #showcase .gradient-bg {
-    background: #5533ff;
-    background: linear-gradient(95deg, #5533ff 40%, #25ddf5 100%);
+    background: #006991;
+    background: linear-gradient(95deg, #006991 40%, #56a5c4 100%);
     padding: 119px 0px 80px 0px; }
   #showcase .showcase-slider .owl-controls .owl-page.active span, #showcase .showcase-slider .owl-controls.clickable .owl-page:hover span {
     filter: Alpha(Opacity=100);
     opacity: 1;
-    background: #3ecf8e; }
+    background: #eab405; }
   #showcase .showcase-slider .owl-controls .owl-page span {
     display: block;
     width: 12px;
@@ -781,7 +808,7 @@ button:focus {
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
     border-radius: 20px;
-    background: #3ecf8e; }
+    background: #eab405; }
   #showcase .showcase-slider .owl-controls .active span {
     width: 15px;
     height: 15px; }
@@ -814,7 +841,7 @@ button:focus {
       color: #fff;
       font-size: 20px; }
   #showcase .showcase-slider .screenshot-thumb > .hover-content {
-    background-color: #3ecf8e;
+    background-color: #eab405;
     opacity: 0.90;
     height: 85%;
     left: 0;
@@ -874,7 +901,7 @@ button:focus {
       color: #5e629c;
       font-style: italic; }
     #testimonial #client-testimonial .owl-controls .owl-buttons div.owl-prev {
-      color: #3ecf8e;
+      color: #eab405;
       display: inline-block;
       zoom: 1;
       *display: inline;
@@ -894,7 +921,7 @@ button:focus {
       height: 38px;
       padding: 8px 0px; }
     #testimonial #client-testimonial .owl-controls .owl-buttons div.owl-next {
-      color: #3ecf8e;
+      color: #eab405;
       display: inline-block;
       zoom: 1;
       *display: inline;
@@ -915,8 +942,8 @@ button:focus {
       padding: 8px 0px; }
     #testimonial #client-testimonial .owl-controls .owl-buttons div.owl-prev:hover, #testimonial #client-testimonial .owl-controls .owl-buttons div.owl-next:hover {
       color: #fff;
-      background: #3ecf8e;
-      border-color: #3ecf8e; }
+      background: #eab405;
+      border-color: #eab405; }
   #testimonial .video-promo-content {
     padding-top: 0;
     padding-bottom: 300px; }
@@ -973,7 +1000,7 @@ button:focus {
     z-index: 3;
     width: 0;
     height: 0;
-    border-left: 22px solid #3ecf8e;
+    border-left: 22px solid #eab405;
     border-top: 14px solid transparent;
     border-bottom: 14px solid transparent;
     border-radius: 2px;
@@ -1004,7 +1031,7 @@ button:focus {
     text-transform: uppercase;
     margin-bottom: 11px; }
   #pricing .pricing-table h1 {
-    color: #3ecf8e;
+    color: #eab405;
     font-size: 50px;
     font-weight: 500;
     position: relative;
@@ -1023,7 +1050,7 @@ button:focus {
     display: block;
     line-height: 33px; }
   #pricing .pricing-table:hover {
-    border: 1px solid #3ecf8e;
+    border: 1px solid #eab405;
     box-shadow: 0px 0px 25px 0px rgba(95, 95, 95, 0.24);
     -moz-transition: all .4s ease;
     -webkit-transition: all .4s ease;
@@ -1057,10 +1084,10 @@ button:focus {
       margin: 4px;
       background: #fff; }
     #team .single-team .team-social-icons ul.social-list li:hover {
-      background: #3ecf8e;
+      background: #eab405;
       -moz-transition: all .4s ease;
       -webkit-transition: all .4s ease;
-      border-color: #3ecf8e;
+      border-color: #eab405;
       transition: all .4s ease; }
     #team .single-team .team-social-icons ul.social-list li:hover a {
       display: block; }
@@ -1070,7 +1097,7 @@ button:focus {
       -webkit-transition: all .4s ease;
       transition: all .4s ease; }
     #team .single-team .team-social-icons ul.social-list li a i {
-      color: #3ecf8e;
+      color: #eab405;
       font-size: 16px; }
   #team .single-team:hover {
     box-shadow: 0px 0px 25px 0px rgba(95, 95, 95, 0.24);
@@ -1116,9 +1143,9 @@ button:focus {
       -moz-transition: all .8s ease;
       -webkit-transition: all .8s ease;
       transition: all .8s ease;
-      border-color: #3ecf8e; }
+      border-color: #eab405; }
     #blog .blog-item-wrapper:hover h3 a {
-      color: #3ecf8e; }
+      color: #eab405; }
     #blog .blog-item-wrapper .blog-item-text {
       padding: 26px 30px 30px 30px; }
     #blog .blog-item-wrapper h3 {
@@ -1133,13 +1160,13 @@ button:focus {
       line-height: 23px;
       margin-bottom: 20px; }
     #blog .blog-item-wrapper a.read-more {
-      color: #3ecf8e;
+      color: #eab405;
       font-size: 14px;
       text-transform: uppercase;
       font-weight: 500;
       position: relative; }
     #blog .blog-item-wrapper a.read-more i {
-      color: #3ecf8e;
+      color: #eab405;
       font-size: 10px;
       position: absolute;
       top: 3px; }
@@ -1150,13 +1177,13 @@ button:focus {
       color: #5e629c;
       font-size: 14px; }
     #blog .blog-item-wrapper span.name i {
-      color: #3ecf8e;
+      color: #eab405;
       margin-right: 5px; }
     #blog .blog-item-wrapper span.date a {
       color: #5e629c;
       font-size: 14px; }
     #blog .blog-item-wrapper span.date i {
-      color: #3ecf8e;
+      color: #eab405;
       margin-right: 5px; }
 
 /* ==========================================================================
@@ -1370,7 +1397,27 @@ button:focus {
    Contact section
    ========================================================================== */
 #contact form#contactForm .form-group {
-  margin-bottom: 30px; }
+  margin-bottom: 30px;
+}
+
+#contact form#contactForm .form-group .form-control.checkbox {
+  width: auto;
+  float: left;
+  margin: 4px 10px;
+  width: 19px;
+  height: 19px;
+}
+
+#contact form#contactForm .form-group span {
+  color: #6c757d;
+  line-height: 28px;
+  font-size: 16px;
+}
+
+
+#contact form#contactForm .form-group {
+  
+}
 
 #contact form#contactForm input[type=text], #contact form#contactForm input[type=email] {
   min-height: 52px;
@@ -1384,32 +1431,38 @@ button:focus {
   color: #5e629c; }
 
 #contact form#contactForm .form-control:focus {
-  border: 1px solid #3ecf8e;
   outline: none;
   box-shadow: none;
-  background: #e5fff3; }
+}
 
 /* ==========================================================================
    Footer section
    ========================================================================== */
 #footer-Content {
   padding-top: 130px;
-  background: #180e29;
+  background: #004763;
   padding-bottom: 130px;
 }
+.footer-logo {
+  position: relative;
+  bottom: 8px;
+  color: white;
+  font-size: 24px;
+}
+
   #footer-Content .footer-logo img {
     padding-top: 70px; }
   #footer-Content .form-control:focus {
     outline: none;
     box-shadow: none;
-    background: #e5fff3; }
+  }
   #footer-Content .copyright {
     margin-top: 125px;
     border-top: 1px solid #3c1f6e;
     padding-top: 30px;
     padding-bottom: 30px; }
     #footer-Content .copyright p {
-      color: #3ecf8e;
+      color: #eab405;
       font-size: 18px; }
     #footer-Content .copyright a {
       color: #ddd; }
@@ -1422,7 +1475,6 @@ button:focus {
     height: 40px;
     margin-top: 18px; }
     #footer-Content .widget .subscribe-area input[type=email] {
-      background: #24153c;
       border: 1px solid #fff;
       color: #e2e2e2;
       font-size: 14px;
@@ -1435,7 +1487,7 @@ button:focus {
       height: 38px;
       color: #fff;
       top: 0;
-      background: #3ecf8e;
+      background: #eab405;
       display: block;
       padding: 9px 20px;
       font-size: 18px;
@@ -1454,7 +1506,7 @@ button:focus {
     -o-transition: all 300ms;
     transition: all 300ms; }
     #footer-Content ul.menu li a:hover {
-      color: #3ecf8e;
+      color: #eab405;
       padding-left: 5px;
       -webkit-transition: all 300ms;
       -o-transition: all 300ms;
