--- a/landing-page/css/main.css
+++ b/landing-page/css/main.css
@@ -31,7 +31,8 @@ p {
   margin-bottom: 0; }
 
 a:hover, a:focus {
-  color: #000; }
+  color: #fff;
+}
 
 a {
   color: #000;
@@ -180,7 +181,7 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
   border-color: #fff;
   background-color: #eab405;
   border: 1px solid #daa600;
-  transform: translateY(-2px);
+  transform: translateY(-5px);
 }
 
 .btn-lg {
@@ -1252,7 +1253,8 @@ button:focus {
   color: #fff;
   font-size: 52px;
   font-weight: 300;
-  margin-bottom: 25px; }
+  margin-bottom: 25px; 
+}
 
 #blog .blog-item-wrapper {
   -webkit-transition: transform .2s linear, -webkit-box-shadow .2s linear;
@@ -1262,50 +1264,61 @@ button:focus {
 #blog .blog-item-wrapper:hover {
   box-shadow: 0 10px 50px 0 rgba(84, 110, 122, 0.35);
   -webkit-transform: translateY(-5px);
-  transform: translateY(-5px); }
+  transform: translateY(-5px); 
+}
 
 #blog-single {
   padding: 80px 0;
-  background: #ecf0f1; }
+  background: #ecf0f1; 
+}
 
 #blog-single .blog-post {
   background: #fff;
   overflow: hidden;
-  margin-bottom: 40px; }
+  margin-bottom: 40px; 
+}
 
 #blog-single .blog-post .post-thumb img {
-  width: 100%; }
+  width: 100%; 
+}
 
 #blog-single .blog-post .post-content {
-  padding: 30px; }
+  padding: 30px; 
+}
 
 #blog-single .blog-post .post-content h3 {
   font-size: 30px;
-  padding-bottom: 10px; }
+  padding-bottom: 10px; 
+}
 
 #blog-single .blog-comment {
   background: #fff;
   padding: 50px 30px;
   margin-top: 30px;
-  overflow: hidden; }
+  overflow: hidden;
+}
 
 #blog-single .blog-comment h4 {
   font-size: 24px;
-  margin-bottom: 30px; }
+  margin-bottom: 30px;
+}
 
 #blog-single .blog-comment .comment-list {
   list-style: none;
   margin: 0;
   padding: 0;
-  margin-bottom: 50px; }
+  margin-bottom: 50px;
+}
 
 #blog-single .blog-comment .comment-list .the-comment {
   border-bottom: 1px solid #e7e6e6;
   padding-bottom: 25px;
-  margin-bottom: 25px; }
+  margin-bottom: 25px;
+}
 
 #blog-single .blog-comment .comment-list .children {
-  padding-left: 40px; }
+  padding-left: 40px;
+}
 
 #blog-single .blog-comment .avatar {
   float: left;
@@ -1313,33 +1326,40 @@ button:focus {
   padding: 5px;
   border-radius: 3px;
   background: #fff;
-  border: 1px dashed #346afe; }
-
+  border: 1px dashed #346afe;
+}
 #blog-single .blog-comment .comment-author {
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+}
 
 #blog-single .blog-comment .meta {
   margin-bottom: 10px;
-  color: #999; }
+  color: #999;
+}
 
 .blog-hero-area .post-meta {
   color: #fff;
   margin-top: 15px;
-  margin-bottom: 15px; }
+  margin-bottom: 15px;
+}
 
 .blog-hero-area .post-meta ul li {
   display: inline-block;
   margin-right: 8px;
-  margin-left: 8px; }
+  margin-left: 8px;
+}
 
 .blog-hero-area .post-meta ul li i {
-  margin-right: 5px; }
+  margin-right: 5px;
+}
 
 .blog-hero-area .post-meta ul li a {
-  color: #fff; }
+  color: #fff;
+}
 
 .blog-hero-area .post-meta ul li a:hover {
-  color: #ff704f; }
+  color: #ff704f;
+}
 
 #blog-single .form-control {
   width: 100%;
@@ -1351,7 +1371,8 @@ button:focus {
   background: #f5f5f5;
   -webkit-transition: all .3s;
   -moz-transition: all .3s;
-  transition: all .3s; }
+  transition: all .3s;
+}
 
 #blog-single .btn-common {
   background-color: #ff704f;
@@ -1360,12 +1381,14 @@ button:focus {
   box-shadow: 0px 8px 9px 0px rgba(96, 94, 94, 0.17);
   width: 160px;
   height: 50px;
-  padding: 14px 15px; }
+  padding: 14px 15px;
+}
 
 #blog-single .form-control:focus {
   border: 1px solid #ff704f;
   outline: none;
-  box-shadow: none; }
+  box-shadow: none;
+}
 
 #subscribe .form-control {
   width: 100%;
@@ -1377,21 +1400,26 @@ button:focus {
   background: #f5f5f5;
   -webkit-transition: all .3s;
   -moz-transition: all .3s;
-  transition: all .3s; }
+  transition: all .3s;
+}
 
 .btn.disabled,
 .btn:disabled {
-  opacity: 1; }
+  opacity: 1;
+}
 
 #blog-single textarea {
-  border-radius: 4px !important; }
+  border-radius: 4px !important;
+}
 
 .text-danger {
   font-size: 14px;
-  margin-top: 10px; }
+  margin-top: 10px;
+}
 
 .list-unstyled li {
-  color: #d9534f; }
+  color: #d9534f;
+}
 
 /* ==========================================================================
    Contact section
@@ -1421,18 +1449,73 @@ button:focus {
 
 #contact form#contactForm input[type=text], #contact form#contactForm input[type=email] {
   min-height: 52px;
-  padding: 0px 0 0 28px;
+  padding: 0px 0 0 20px;
   font-size: 16px;
-  color: #5e629c; }
+  color: #5e629c;
+}
 
 #contact form#contactForm textarea {
-  padding: 15px 0 0 28px;
+  padding: 15px 0 0 20px;
   font-size: 16px;
   color: #5e629c; }
 
 #contact form#contactForm .form-control:focus {
   outline: none;
   box-shadow: none;
+}
+
+#name + .with-errors {
+  display: none;
+}
+#name.error + .with-errors {
+  display: block;
+}
+
+#email + .with-errors {
+  display: none;
+}
+#email.error + .with-errors {
+  display: block;
+}
+textarea.error,
+input.error {
+  border: 1px solid red;
+}
+textarea.error + .with-errors,
+input.error + .with-errors {
+  display: block;
+  color: red;
+  font-size: 11px;
+  padding: 0px 20px;
+  position: absolute;
+  top: 55px;
+}
+
+#phone + .with-errors {
+  display: none;
+}
+#phone.error + .with-errors {
+  display: block;
+}
+
+#referal + .with-errors {
+  display: none;
+}
+#referal.error + .with-errors {
+  display: block;
+}
+
+#message + .with-errors {
+  display: none;
+}
+#message.error + .with-errors {
+  display: block;
+}
+
+input.error::placeholder,
+textarea.error::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: red;
+  opacity: 1; /* Firefox */
 }
 
 /* ==========================================================================
@@ -1443,71 +1526,82 @@ button:focus {
   background: #004763;
   padding-bottom: 130px;
 }
-.footer-logo {
+.footer-logo a {
   position: relative;
   bottom: 8px;
   color: white;
   font-size: 24px;
 }
 
-  #footer-Content .footer-logo img {
-    padding-top: 70px; }
-  #footer-Content .form-control:focus {
-    outline: none;
-    box-shadow: none;
-  }
-  #footer-Content .copyright {
-    margin-top: 125px;
-    border-top: 1px solid #3c1f6e;
-    padding-top: 30px;
-    padding-bottom: 30px; }
-    #footer-Content .copyright p {
-      color: #eab405;
-      font-size: 18px; }
-    #footer-Content .copyright a {
-      color: #ddd; }
-  #footer-Content .widget p {
-    color: #e2e2e2;
-    font-size: 16px;
-    line-height: 32px; }
-  #footer-Content .widget .subscribe-area {
-    position: relative;
-    height: 40px;
-    margin-top: 18px; }
-    #footer-Content .widget .subscribe-area input[type=email] {
-      border: 1px solid #fff;
-      color: #e2e2e2;
-      font-size: 14px;
-      font-style: italic;
-      height: 38px; }
-    #footer-Content .widget .subscribe-area span i {
-      position: absolute;
-      right: 0;
-      width: 60px;
-      height: 38px;
-      color: #fff;
-      top: 0;
-      background: #eab405;
-      display: block;
-      padding: 9px 20px;
-      font-size: 18px;
-      border-radius: 0px 4px 4px 0px; }
-  #footer-Content h3.block-title {
-    color: #fff;
-    font-size: 20px;
-    font-weight: 600;
-    margin-bottom: 30px; }
-  #footer-Content ul.menu li a {
-    color: #e2e2e2;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 32px;
-    -webkit-transition: all 300ms;
-    -o-transition: all 300ms;
-    transition: all 300ms; }
-    #footer-Content ul.menu li a:hover {
-      color: #eab405;
-      padding-left: 5px;
-      -webkit-transition: all 300ms;
-      -o-transition: all 300ms;
-      transition: all 300ms; }
+#footer-Content .footer-logo img {
+  padding-top: 70px;
+}
+#footer-Content .form-control:focus {
+  outline: none;
+  box-shadow: none;
+}
+#footer-Content .copyright {
+  margin-top: 125px;
+  border-top: 1px solid #3c1f6e;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+#footer-Content .copyright p {
+  color: #eab405;
+  font-size: 18px;
+}
+#footer-Content .copyright a {
+  color: #ddd;
+}
+#footer-Content .widget p {
+  color: #e2e2e2;
+  font-size: 16px;
+  line-height: 32px;
+}
+#footer-Content .widget .subscribe-area {
+  position: relative;
+  height: 40px;
+  margin-top: 18px;
+}
+#footer-Content .widget .subscribe-area input[type=email] {
+  border: 1px solid #fff;
+  color: #e2e2e2;
+  font-size: 14px;
+  font-style: italic;
+  height: 38px;
+}
+#footer-Content .widget .subscribe-area span i {
+  position: absolute;
+  right: 0;
+  width: 60px;
+  height: 38px;
+  color: #fff;
+  top: 0;
+  background: #eab405;
+  display: block;
+  padding: 9px 20px;
+  font-size: 18px;
+  border-radius: 0px 4px 4px 0px;
+}
+#footer-Content h3.block-title {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 30px;
+}
+#footer-Content ul.menu li a {
+  color: #e2e2e2;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 32px;
+  -webkit-transition: all 300ms;
+  -o-transition: all 300ms;
+  transition: all 300ms;
+}
+#footer-Content ul.menu li a:hover {
+  color: #eab405;
+  padding-left: 5px;
+  -webkit-transition: all 300ms;
+  -o-transition: all 300ms;
+  transition: all 300ms;
+}
