--- a/server/public/es/css/main.css
+++ b/server/public/es/css/main.css
@@ -1557,7 +1557,7 @@ Domain Path:      /languages/
       Footer section
       ========================================================================== */
    #footer-Content {
-     padding-top: 130px;
+     padding-top: 80px;
      background: #004763;
      padding-bottom: 130px;
    }
@@ -1598,6 +1598,9 @@ Domain Path:      /languages/
      height: 40px;
      margin-top: 18px;
    }
+   #footer-Content .widget .subscribe-area label {
+    color: white;
+  }
    #footer-Content .widget .subscribe-area input[type=email] {
      border: 1px solid #fff;
      color: #333;
@@ -1606,23 +1609,22 @@ Domain Path:      /languages/
      height: 38px;
    }
    #footer-Content .widget .subscribe-area span i {
-     position: absolute;
-     right: 0;
-     width: 60px;
-     height: 38px;
-     color: #fff;
-     top: 0;
-     background: #eab405;
-     display: block;
-     padding: 9px 20px;
-     font-size: 18px;
-     border-radius: 0px 4px 4px 0px;
+    position: absolute;
+    right: 0;
+    height: 38px;
+    color: #fff;
+    top: 29px;
+    background: #eab405;
+    display: block;
+    padding: 10px 20px;
+    font-size: 18px;
+    border-radius: 0px 4px 4px 0px;
    }
    #footer-Content h3.block-title {
      color: #fff;
      font-size: 20px;
      font-weight: 600;
-     margin-bottom: 30px;
+     margin-bottom: 20px;
    }
    #footer-Content ul.menu li a {
      color: #e2e2e2;
@@ -1632,6 +1634,11 @@ Domain Path:      /languages/
      -webkit-transition: all 300ms;
      -o-transition: all 300ms;
      transition: all 300ms;
+   }
+   
+   #footer-Content ul.menu li.rrss a {
+     margin: 0px 15px 0px 0px;
+     font-size: 24px;
    }
    #footer-Content ul.menu li a:hover {
      color: #eab405;
